syntax = "proto3";

option csharp_namespace = "WallTec.CoreCom.Proto";

package CoreCom;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";




service CoreCom {
	
	rpc ClientConnectToServer(ConnectToServerRequest) returns (ConnectToServerResponse);

	rpc ClientDisconnectFromServer(DisconnectFromServerRequest) returns (DisconnectFromServerResponse);
	//Public functions needs no token

	rpc SubscribeServerToClient(CoreComMessage) returns (stream CoreComMessageResponse);
	//Authenticated functions

	rpc SubscribeServerToClientAuth(CoreComMessage) returns (stream CoreComMessageResponse);
}


message ConnectToServerRequest {
	string ClientId = 1;
	
}
message ConnectToServerResponse {
	string Response = 1;
	google.protobuf.Timestamp ServerDateTime = 2;
	
}

message DisconnectFromServerRequest {
	string ClientId = 1;
	
}

message DisconnectFromServerResponse {
	string Response = 1;
	google.protobuf.Timestamp ServerDateTime = 2;
	
}

message CoreComMessage {
	string CoreComMessageId=1;
	string ClientId = 2;
	//google.protobuf.Timestamp CreateTimeUtc = 3;
	string TransactionIdentifier = 4;
	string MessageSignature = 5;
	string JsonObjectType =6;
	string JsonObject =7;
	int32 TransferStatus=8;
	bool SendAuth=9;	
}

message CoreComMessageResponse {
	string CoreComMessageResponseId=1;
	string ClientId = 2;
	//google.protobuf.Timestamp CreateTimeUtc = 3;
	string TransactionIdentifier = 4;
	string MessageSignature = 5;
	string JsonObjectType =6;
	string JsonObject =7;
	int32 TransferStatus=8;	
}


